Phasex-web, first version

--- a/index.html
+++ b/index.html
@@ -1,1 +1,87 @@
-Test
+<html>
+    <head>
+        <title>
+            PHASEX Development Branch
+        </title
+        <link rel="stylesheet" type="text/css" href="style.css" />
+    </head>
+    <body>
+        <div id="wrap">
+        <div id="header"
+            <h1>PHASEX Development Branch</h1>
+        </div>
+        <div id="navigation">|
+            <a href="index.html"><b>Home</b></a> |
+            <a href="features.html">Features</a> |
+            <a href="changelog.html">Changelog</a> |
+            <a href="http://github.com/disabled/phasex-dev/downloads">Downloads</a> |
+            <a href="http://github.com/disabled/phasex-dev/issues">Bugtracker</a> |
+            <a href="mailto:assault64@gmail.com">Contact</a> |
+        </div>
+        <div id="mainarea">
+            <div id="quote">
+            <div id="quote-text">
+                PHASEX is an experimental software synthesizer for use with Linux/ALSA/JACK.
+                The name comes partially from its experimental method of using phase offset modulation,
+                where each oscillator can have its phase offset between right and left channels
+                modulated by an LFO or another oscillator.
+            </div>
+            <div id="quote-from">
+                -- William Weston, PHASEX original author (<a href="http://www.sysex.net/phasex/">http://www.sysex.net/phasex/</a>)
+            </div>
+            </div>
+            <div id="last-release">    
+                <p>Latest release: Milestone 1  -- <a href="sdfsdf">download</a></p>
+                <p>Changelog:</p>
+                <ul>
+                    <li>Added LASH support.</li>
+                    <li>Added sustain pedal support.</li>
+                    <li>Fixed behavior of NOTE_OFF in attack.</li>
+                    <li>Fixed system GTK theme.</li>
+                    <li>Added 'Panic' button.</li>
+                    <li>Fixed behavior of polyphony limit.</li>
+                    <li>Fixed ADSR calculation.</li>
+                    <li>Fixed chorus interpolation.</li>
+                    <li>'Feedback' chorus and delay setting renamed to 'Feedback Mix'.</li>
+                    <li>Added DC blocking filter.</li>
+                    <li>Fixed MIDI learn for BPM parameter.</li>
+                    <li>Changed naming scheme of multiple instances.</li>
+                    <li>Added -n (--name) option to set name of PHASEX instance.</li>
+                <ul>
+            </div>
+            <div id="description">
+                This is development branch of <a href="http://www.sysex.net/phasex/">PHASEX</a> software synthesizer, 
+                which main goal is to make
+                this wonderful synth more useful by fixing bugs and adding some most missed features.
+                Original sounding will not be changed so much, but because of some bugfixes it will, so if you are
+                using original version of PHASEX keep it in mind.<br />
+                <p>For detailed description look at <a href="features.html">features section</a>.</p>
+                <p>Questions/suggestions/missing features? Feel free to <a href="mailto:assault64@gmail.com">contact</a> me.</p>
+                <b>General roadmap</b>
+                <ul>
+                <li>Milestone 1: Bugfixes, LASH support. (current)</li>
+                <li>Milestone 2: More bugfixes. Better engine loop and JACK thread sync.<br />
+                            LFO, delay and chorus clock-sync.</li>
+                <li>Milestone 3: JACK MIDI support. (?) jack-session support/LADISH support.</li>
+                <li>Milestone 4: Various stability fixes.</li>
+                <li>Milestone 5: Branch freeze.</li>
+                </ul>
+                <b>How to get</b>
+                <ul>
+                <li>For stable releases see <a href="http://github.com/disabled/phasex-dev/downloads">downloads section</a></li>
+                <li>For bleeding edge code use Git repo: git://github.com/disabled/phasex-dev.git</li>
+                </ul>
+                <b>Screenshots</b>
+                <p>
+                <div id="screenshots">
+                <a href="scr/2.png"><img src="scr/2.png" height="150" width="221" alt="Main window, main tab" /></a>
+                <a href="scr/3.png"><img src="scr/3.png" height="150" width="221" alt="Main window, oscillators tab" /></a>
+                <a href="scr/4.png"><img src="scr/4.png" height="150" width="122" alt="Preferences window" /></a>
+                </div>
+                </p>
+            </div>
+        </div>
+        </div>
+    </body>
+</html>
+        
