--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
             </div>
             <div id="last-release">    
-                <p>Latest release: Milestone 1  -- <a href="sdfsdf">download</a></p>
+                <p>Latest release: Milestone 1  -- <a href="http://github.com/downloads/disabled/phasex-dev/phasex-dev-m1.tar.gz">download</a></p>
                 <p>Changelog:</p>
                 <ul>
                     <li>Added LASH support.</li>
