--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <title>
             PHASEX Development Branch
         </title
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <link rel="stylesheet" type="text/css" href="style.css" />
     </head>
     <body>
